--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
         <!-- Main Header H1 big letters-->
         <div class="header">
             <h1>Hori<span class="seo">seo</span>n</h1>
+            <!-- Navigation bar with the links-->
             <nav>
+                <!--List of the links -->
                 <ul>
+                    <!--List of 3 elements-->
                     <li>
                         <a href="#search-engine-optimization">Search Engine Optimization</a>
                     </li>
@@ -26,65 +29,98 @@
                 </ul>
             </nav>
         </div>
-
+        <!--Big Main Image of the website-->
         <figure class="mainImg" alt= "main big image"> </figure>
 
+        <!--Main Container of Info with 3 Sections-->
         <main class="content">
+
+            <!--Section 1 of Info Search-->
             <section id="search-engine-optimization" class="search-engine-optimization">
+                <!-- Search Image url-->
                 <img src="./assets/images/search-engine-optimization.jpg" alt= "desk with tools" class="float-left" />
+                <!--Search Header Text -->
                 <h2>Search Engine Optimization</h2>
+                <!--Search Text -->
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
             </section>
+            <!-- Section 2 of Info Reputation-->
             <section id="online-reputation-management" class="online-reputation-management">
+                <!--Reputation Image url -->
                 <img src="./assets/images/online-reputation-management.jpg" alt="laptop computer" class="float-right" />
+                <!-- Reputation Header Text -->
                 <h2>Online Reputation Management</h2>
+                <!--Reputation text-->
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
             </section>
+            <!--Section 3 of Info Social Media-->
             <section id="social-media-marketing" class="social-media-marketing">
+                <!--Social Media Image url-->
                 <img src="./assets/images/social-media-marketing.jpg" alt= "social media icons" class="float-left" />
+                <!--Social Media Header Text-->
                 <h2>Social Media Marketing</h2>
+                <!--Social Media Text-->
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
             </section>
         </main>
 
+        <!--A Side Container with 3 Sections -->
         <aside class="benefits">
+
+            <!--A side Section 1 Lead -->
             <section class="benefit-lead">
+                <!--Lead header text -->
                 <h3>Lead Generation</h3>
+                <!--Lead Image-->
                 <figure> 
                     <img src="./assets/images/lead-generation.png" alt="Generation money icon" />
                 </figure>
+                <!--Lead Text-->
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
             </section>
+
+            <!--A Side Section 2 Brand -->
             <section class="benefit-brand">
+                <!--Brand header text-->
                 <h3>Brand Awareness</h3>
+                <!--Brand Image-->
                 <figure> 
                     <img src="./assets/images/brand-awareness.png" alt="Idea lightbulb icon" />
                 </figure>
+                <!--Brand Text-->
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
             </section>
+
+            <!--A Side Section 3 Cost -->
             <section class="benefit-cost">
+                <!--Cost header text-->
                 <h3>Cost Management</h3>
+                <!--Cost Image-->
                 <figure> 
                     <img src="./assets/images/cost-management.png" alt="Money and coins icon"></img>
                 </figure>
+                <!--Cost Text-->
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
             </section>
         </aside>
-    
+
+        <!-- Footer Section -->
         <footer class="footer">
+            <!--Footer header text-->
             <h2>Made with ❤️️ by Horiseon</h2>
+            <!--Footer text-->
             <p>
                 &copy; 2019 Horiseon Social Solution Services, Inc.
             </p>
