--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <!-- Web site main header -->
+    <!-- Web page main header -->
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
-        <!-- Website Title-->
+        <!-- Webpage Title-->
         <title>Horiseon - A Marketing Company</title>
     </head>
-    <!-- Body structure of the website-->
+    <!-- Body structure of the webpage-->
     <body>
         <!-- Main Header H1 big letters-->
         <div class="header">
@@ -29,7 +29,7 @@
                 </ul>
             </nav>
         </div>
-        <!--Big Main Image of the website-->
+        <!--Big Main Image of the webpage-->
         <figure class="mainImg" alt= "main big image"> </figure>
 
         <!--Main Container of Info with 3 Sections-->
@@ -116,7 +116,7 @@
             </section>
         </aside>
 
-        <!-- Footer Section -->
+        <!-- Footer Section of the webpage -->
         <footer class="footer">
             <!--Footer header text-->
             <h2>Made with ❤️️ by Horiseon</h2>
