--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <aside class="benefits">
 
             <!--A side Section 1 Lead -->
-            <section class="benefit-lead">
+            <section class="benefit-lead ">
                 <!--Lead header text -->
                 <h3>Lead Generation</h3>
                 <!--Lead Image-->
@@ -117,7 +117,7 @@
         </aside>
 
         <!-- Footer Section of the webpage -->
-        <footer class="footer">
+        <footer>
             <!--Footer header text-->
             <h2>Made with ❤️️ by Horiseon</h2>
             <!--Footer text-->
