--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <aside class="benefits">
 
             <!--A side Section 1 Lead -->
-            <section class="benefit-lead ">
+            <section class="benefit">
                 <!--Lead header text -->
                 <h3>Lead Generation</h3>
                 <!--Lead Image-->
@@ -88,7 +88,7 @@
             </section>
 
             <!--A Side Section 2 Brand -->
-            <section class="benefit-brand">
+            <section class="benefit">
                 <!--Brand header text-->
                 <h3>Brand Awareness</h3>
                 <!--Brand Image-->
@@ -102,7 +102,7 @@
             </section>
 
             <!--A Side Section 3 Cost -->
-            <section class="benefit-cost">
+            <section class="benefit">
                 <!--Cost header text-->
                 <h3>Cost Management</h3>
                 <!--Cost Image-->
